--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ header nav li a:hover {
   }
 
   #image2 {
-    background-image: url('https://via.placeholder.com/1000/393b4f/fb3e55?text=Placeholder');
+    background-image: url('../images/online-therapy-2.jpg');
     background-color: #cccccc;
     height: 300px;
     width: 1000px;
